# haven

./: .gitignore  AGENTS.md  Cargo.toml  DATA-MODEL.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES.md  USING-HAVEN.md
.github/workflows/: release.yml
crates/haven-auth/: Cargo.toml
crates/haven-auth/src/: device.rs  keyring_store.rs  lib.rs
crates/haven-cli/: Cargo.toml
crates/haven-cli/src/: config.rs  main.rs  output.rs
crates/haven-cli/tests/: cli.rs
crates/haven-core/: Cargo.toml
crates/haven-core/src/: db.rs  error.rs  lib.rs  model.rs  sortkey.rs  telemetry.rs  time.rs  util.rs
crates/haven-core/src/store/: backup.rs  content.rs  edge.rs  evolve.rs  import.rs  item.rs  mod.rs  prime.rs  query.rs  service_tests.rs
crates/haven-core/src/store/backup/: lock.rs  manifest.rs  mod.rs  objects.rs
crates/haven-mcp/: Cargo.toml
crates/haven-mcp/src/: lib.rs  main.rs
crates/haven-sync/: Cargo.toml
crates/haven-sync/src/: engine.rs  lib.rs  local.rs
migrations/: 001_init.sql  002_acceptance.sql  003_anchor_type.sql  004_due_at.sql  005_owner_eligible.sql  006_drop_owner_eligible.sql  007_context_pack_role.sql  008_project_lifecycle.sql
packaging/: install.sh
packaging/homebrew/: haven.rb
skill/create-context-pack/: SKILL.md
skill/create-context-pack/agents/: openai.yaml
skill/create-context-pack/evals/: trigger-eval.json
skill/create-context-pack/references/: pack-ops.md  pack-template.md  verify-ops.md
skill/haven/: SKILL.md
skill/haven/agents/: openai.yaml
skill/haven/evals/: trigger-eval.json
skill/haven/references/: external-handoff.md  parallel-dev.md  running-work.md  spec-quality.md  surface-map.md  workflows.md
skill/orchestrate-plan/: SKILL.md
skill/orchestrate-plan/agents/: openai.yaml
skill/orchestrate-plan/evals/: trigger-eval.json
skill/orchestrate-plan/references/: decomposition.md  tick-ops.md  value-density.md
skill/orchestrate-run/: SKILL.md
skill/orchestrate-run/agents/: openai.yaml
skill/orchestrate-run/evals/: trigger-eval.json
skill/orchestrate-run/references/: dispatch-policy.md  executor-discipline.md  tick-ops.md  worktree-merge.md
skill/prepare-for-dev/: SKILL.md
skill/prepare-for-dev/agents/: openai.yaml
skill/prepare-for-dev/references/: pack-template.md  verify-ops.md
skill/verify/: SKILL.md
skill/verify-acceptance/: SKILL.md
skill/verify-acceptance/agents/: openai.yaml
skill/verify-acceptance/evals/: trigger-eval.json
skill/verify-acceptance/references/: browser-mode.md  evaluation-lens.md  mode2-future.md  verdict-contract.md  verify-ops.md
skill/verify/agents/: openai.yaml
skill/verify/references/: evaluation-lens.md  verdict-contract.md  verify-ops.md
supabase/: config.toml
supabase/migrations/: 0001_init.sql  0002_anchor_type.sql  0003_due_at.sql  0004_owner_eligible.sql  0005_drop_owner_eligible.sql  0006_context_pack_role.sql  0007_project_lifecycle.sql
