[package]
name = "haven-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Haven work-graph service layer: local SQLite store, domain ops, lineage, FTS."

[dependencies]
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
thiserror.workspace = true
tar.workspace = true
flate2.workspace = true

[dev-dependencies]
tempfile.workspace = true
